# dbmsForClass

./: .gitignore  CMakeLists.txt  build.sh  cmake-conf.bat  cmake-conf.sh  datin.0  debug_build.sh  file.txt  gtkmm-4.0-vscode-includes  makefile  out.xml  release_build.sh  test  test.cpp  test2.txt
src/: gtk.cpp  main.cpp  out.xml
src/include/: dbms.h  ui.h
src/libs/: CMakeLists.txt  dbms.cpp
